# pythonProjectkursov2

./: pyproject.toml
src/: api_hh.py  base.py  vacancy.py  view.py
