[tool.poetry]
name = "pythonprojectkursov2"
version = "0.1.0"
description = ""
authors = ["Elizaveta <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
